# oz_02_collabo-006-BE

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  logs  nginx.conf  pull  pyproject.toml  test_check.txt  up
.github/ISSUE_TEMPLATE/: 이슈-카드-템플릿.md
archive/: admin.py  models.py  serializers.py  urls.py  views.py
archive/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_archive_description_alter_archive_post.py  0005_alter_archivestatus_user.py  0006_alter_archivestatus_user.py  0007_remove_archive_post_archive_posts_and_more.py  0008_remove_archive_posts_archivepost.py
comments/: admin.py  models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_comment_likes.py  0004_comment_paraent_comment.py  0005_rename_paraent_comment_comment_recomment.py  0006_rename_recomment_comment_parent_comment.py
config/: settings.py  urls.py
crawling/: insta.py  test.py
follow/: admin.py  models.py  serializers.py  urls.py  views.py
follow/migrations/: 0001_initial.py  0002_alter_follower_unique_together_and_more.py  0002_initial.py
hashtags/: admin.py  models.py  serializers.py  urls.py  views.py
hashtags/migrations/: 0001_initial.py  0002_alter_hashtag_hashtag.py  0003_alter_hashtag_table.py  0004_rename_hashtag_hashtag_content.py
medias/: admin.py  models.py  serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py
posts/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
search/: serializers.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+9 files in other folders)
